Update index.html (sync RED)

--- a/index.html
+++ b/index.html
@@ -639,8 +639,6 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr><th scope="row">PTP<span class="arrow">-&gt;</span>TLFB</td><td>91&nbsp;days</td><td>Power User+ user class.</td></tr>
 <tr><th scope="row">PTP<span class="arrow">-&gt;</span>UHDB</td><td>30&nbsp;days</td><td>Power User+ user class.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">PirateTheNet (PTN)<br>Awaiting someone to add.</td></tr>
-<tr class="spacer"></tr>
 <tr><td colspan="3">PixelCove (PxC)<br>No invite forum.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">PixelHD (PxHD)<br>No invite forum.</td></tr>
@@ -656,40 +654,42 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr class="spacer"></tr>
 <tr><td colspan="3">PTFiles (PTF)<br>Awaiting someone to add.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">Redacted (RED)<br>Invite forum unlocks with Power User user class: 25GB upload, 0.65 ratio, 5 torrents uploaded, 2 weeks account age.<br><br>Elite user class: 100GB upload, 0.65 ratio, 50 torrents uploaded, 4 weeks account age.<br>Torrent Master user class: 500GB upload, 0.65 ratio, 500 torrents uploaded, 8 weeks account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>AB</td><td>180&nbsp;days</td><td>Power User user class + 1 year account age, or Elite user class + 6 months account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>Aither</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
+<tr><td colspan="3">Redacted (RED)<br>Invite forum unlocks with Power User+ user class: 25GB upload, 0.65 ratio, 5 torrents uploaded, 2 weeks account age.<br><br>Elite+ user class: 100GB upload, 0.65 ratio, 50 torrents uploaded, 4 weeks account age.<br>Torrent Master+ user class: 500GB upload, 0.65 ratio, 500 torrents uploaded, 8 weeks account age.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>AB</td><td>182/365&nbsp;days</td><td>Power User+ user class with 12 months account age, or Elite+ user class with 6 months account age.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>Aither</td><td>91&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>ANT</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>BBT</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>BLU</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>BdC</td><td>120&nbsp;days</td><td>4 months account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>BTN</td><td>365&nbsp;days</td><td>Torrent Master user class. 1 year account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>CCC</td><td>14&nbsp;days</td><td>Other tracker profiles.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>BBT</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>BHD</td><td>56&nbsp;days</td><td>Torrent Master+ user class.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>BLU</td><td>91&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>BdC</td><td>121&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>BTN</td><td>365&nbsp;days</td><td>Torrent Master+ user class.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>CCC</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>CCS</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>CGP</td><td>180&nbsp;days</td><td>1.0 ratio. 6 months account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>D3</td><td>365&nbsp;days</td><td>Elite user class. 1.5 ratio. 100 Perfect FLAC torrent uploads. 1 year account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>DIC</td><td>14&nbsp;days</td><td>10 music torrent uploads.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>Emp</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>GGn</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>GPW</td><td>28&nbsp;days</td><td>4 weeks account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>HDB</td><td>730&nbsp;days</td><td>Torrent Master user class. 2 years account age. Some additional requirements.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>iAnon</td><td>365&nbsp;days</td><td>1 year account age.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>CGP</td><td>91/182&nbsp;days</td><td>Power User+ user class, 6 months account age, 2.0 ratio, 200GB upload, or Elite+ user class, 3 months account age, 1.0 ratio, 200GB upload.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>D3</td><td>365&nbsp;days</td><td>Elite+ user class, 1.5 ratio. 100 Perfect CD FLAC uploads.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>DIC</td><td>365&nbsp;days</td><td>10 music uploads.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>EMP</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>GGn</td><td>91&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>GPW</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>HDB</td><td>730&nbsp;days</td><td>Torrent Master+ user class, >=50% of uploads are music, and 2 of the following: [a.] 500GB music seed size, [b.] seeding 100% of snatches, [c.] 500 perfect FLAC uploads, [d.] 3 years account age </td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>iAnon</td><td>365&nbsp;days</td><td>0.65 ratio.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>IMT</td><td>365&nbsp;days</td><td>3 other tracker profiles (with account age over 12 months).</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>LB</td><td>14&nbsp;days</td><td>1 other tracker profile.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>LzTr</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>MAM</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>MiM</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>MTV</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>NBL</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>OPS</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>PTN</td><td>14&nbsp;days</td><td>Other tracker profiles.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>PTP</td><td>730&nbsp;days</td><td>Torrent Master user class. 2 years account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>PxHD</td><td>14&nbsp;days</td><td>Elite user class. 3 other tracker profile with 6 months account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>RTT</td><td>365&nbsp;days</td><td>2 other tracker profiles. 1 year account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>SC</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>PTP</td><td>730&nbsp;days</td><td>Torrent Master+ user class, >=50% of uploads are music.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>PxHD</td><td>14&nbsp;days</td><td>Elite+ or 'High-Level' Power User+ user class. 3 other tracker profile (with account age over 6 months).</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>RTT</td><td>365&nbsp;days</td><td>2 other tracker profiles.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>SC</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>SM</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>SceneHD</td><td>150&nbsp;days</td><td>5 months account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>TLFB</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>SHD</td><td>152&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>TE</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>TG</td><td>14&nbsp;days</td><td>1.05 ratio, 60GB upload, 3 other tracker profiles (with account age over 6 months, includes RED).</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>TLFB</td><td>91&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>TG</td><td>180&nbsp;days</td><td>1.05 ratio. 6 months account age. 3 other tracker profile with 6 months account age.</td></tr>
-<tr><th scope="row">RED<span class="arrow">-&gt;</span>TS</td><td>365&nbsp;days</td><td>1 year account age.</td></tr>
+<tr><th scope="row">RED<span class="arrow">-&gt;</span>TS</td><td>365&nbsp;days</td><td>1 year account age or 1 other tracker profile (with account age over 12 months).</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>UHDB</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">U2.dmhy.org (U2分享園@動漫花園) (U2)<br>Invite forum unlocks with Power User user class: 50GB download, 1.05 ratio, 4 weeks account age.<br><br>Elite User user class: 120GB download, 1.55 ratio, 8 weeks account age.<br>Crazy User user class: 300GB download, 2.05 ratio, 15 weeks account age.<br>Insane User user class: 500GB download, 2.55 ratio, 25 weeks account age.</td></tr>
