--- a/index.html
+++ b/index.html
@@ -692,6 +692,14 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>TS</td><td>365&nbsp;days</td><td>1 year account age or 1 other tracker profile (with account age over 12 months).</td></tr>
 <tr><th scope="row">RED<span class="arrow">-&gt;</span>UHDB</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
+<tr><td colspan="3">RetroFlix (RFX)<br>Invite forum unlocks with Movie Lover+ user class: 50GB download, 1.05 ratio, 4 weeks account age.</td></tr>
+<tr><th scope="row">RFX<span class="arrow">-&gt;</span>ANT</td><td>91&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">RFX<span class="arrow">-&gt;</span>eShareNet</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">RFX<span class="arrow">-&gt;</span>GPW</td><td>28&nbsp;days</td><td>>=10 non-music uploads, or >=5 album uploads.</td></tr>
+<tr><th scope="row">RFX<span class="arrow">-&gt;</span>NBL</td><td>91&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">RFX<span class="arrow">-&gt;</span>SpeedApp</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">RFX<span class="arrow">-&gt;</span>TBDev</td><td>28&nbsp;days</td><td>Awaiting someone to add</td></tr>
+<tr class="spacer"></tr>
 <tr><td colspan="3">U2.dmhy.org (U2分享園@動漫花園) (U2)<br>Invite forum unlocks with Power User user class: 50GB download, 1.05 ratio, 4 weeks account age.<br><br>Elite User user class: 120GB download, 1.55 ratio, 8 weeks account age.<br>Crazy User user class: 300GB download, 2.05 ratio, 15 weeks account age.<br>Insane User user class: 500GB download, 2.55 ratio, 25 weeks account age.</td></tr>
 <tr><th scope="row">U2<span class="arrow">-&gt;</span>Azusa</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">U2<span class="arrow">-&gt;</span>DIC</td><td>105&nbsp;days</td><td>Crazy User user class. 5 music torrent uploads, or 10 other uploads.</td></tr>
