Update index.html (sync RTT, SHD, SC, Shazbat, SG, SPD, SpeedApp, SPC, SM, SB, THD, TE, TG, TP, TSP, TV, TL, TS, TT, TVV, UHDB, XS, XT)

--- a/index.html
+++ b/index.html
@@ -700,6 +700,73 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr><th scope="row">RFX<span class="arrow">-&gt;</span>SpeedApp</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">RFX<span class="arrow">-&gt;</span>TBDev</td><td>28&nbsp;days</td><td>Awaiting someone to add</td></tr>
 <tr class="spacer"></tr>
+<tr><td colspan="3">RevolutionTT (RTT)<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">SceneHD (SHD)<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">SecretCinema (SC)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">Shazbat<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">SocietyGlitch (SG)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">Speed.CD (SPD)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">SpeedApp<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">SportsCult (SPC)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">Sugoi Music (SM)<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">SuperBits (SB)<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">Team HD (THD)<br>Awaiting someone to add.</td></tr>
+<tr><th scope="row">THD<span class="arrow">-&gt;</span>BdC</td><td>60&nbsp;days</td><td>1080p+ user class.</td></tr>
+<tr><th scope="row">THD<span class="arrow">-&gt;</span>CG</td><td>365&nbsp;days</td><td>720p+ user class.</td></tr>
+<tr><th scope="row">THD<span class="arrow">-&gt;</span>Hares</td><td>1&nbsp;days</td><td>Power User+ user class.</td></tr>
+<tr><th scope="row">THD<span class="arrow">-&gt;</span>HD Dolby</td><td>1&nbsp;days</td><td>1080i+ user class.</td></tr>
+<tr><th scope="row">THD<span class="arrow">-&gt;</span>HDS</td><td>1&nbsp;days</td><td>1080i+ user class.</td></tr>
+<tr><th scope="row">THD<span class="arrow">-&gt;</span>HDC</td><td>1&nbsp;days</td><td>1080i+ user class.</td></tr>
+<tr><th scope="row">THD<span class="arrow">-&gt;</span>HDF</td><td>1&nbsp;days</td><td>Power User+ user class.</td></tr>
+<tr><th scope="row">THD<span class="arrow">-&gt;</span>IMT</td><td>365&nbsp;days</td><td>3 other tracker profiles.</td></tr>
+<tr><th scope="row">THD<span class="arrow">-&gt;</span>Lemon HD</td><td>92&nbsp;days</td><td>1080i+ user class.</td></tr>
+<tr><th scope="row">THD<span class="arrow">-&gt;</span>PTHome</td><td>91&nbsp;days</td><td>1080i+ user class.</td></tr>
+<tr><th scope="row">THD<span class="arrow">-&gt;</span>PTMSG</td><td>365&nbsp;days</td><td>1080p+ user class.</td></tr>
+<tr><th scope="row">THD<span class="arrow">-&gt;</span>SpeedApp</td><td>1&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">THD<span class="arrow">-&gt;</span>TLFBits</td><td>182&nbsp;days</td><td>720p+ user class.</td></tr>
+<tr><th scope="row">THD<span class="arrow">-&gt;</span>UHDB</td><td>182&nbsp;days</td><td>1080p+ user class.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">TheEmpire (TE)<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">TheGeeks (TG)<br>No requirements.</td></tr>
+<tr><th scope="row">TG<span class="arrow">-&gt;</span>IMT</td><td>1&nbsp;days</td><td>3 other tracker profiles (with account age over 12 months).</td></tr>
+<tr><th scope="row">TG<span class="arrow">-&gt;</span>MIM</td><td>91&nbsp;days</td><td>Power User+ user class, screenshots of digital magic library.</td></tr>
+<tr><th scope="row">TG<span class="arrow">-&gt;</span>TE</td><td>1&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">TG<span class="arrow">-&gt;</span>TV</td><td>91&nbsp;days</td><td>30 valuable forum posts or active IRC user.</td></tr>
+<tr><th scope="row">TG<span class="arrow">-&gt;</span>TS</td><td>1&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">ThePlace (TP)<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">TheScenePlace (TSP)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">TheVault (TV)<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">TorrentLeech (TL)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">TorrentSeeds (TS)<br>Awaiting someone to add.
+</td></tr>
+<tr><th scope="row">TS<span class="arrow">-&gt;</span>iAnon</td><td>365&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">TranceTraffic (TT)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">TV-Vault (TVV)<br>Invite forum unlocks with Elite+ user class: 26 weeks account age, 1B downloaded, 100GB uploaded, 20 torrents uploaded, 1.25 ratio.
+</td></tr>
+<tr><th scope="row">TVV<span class="arrow">-&gt;</span>AR</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">TVV<span class="arrow">-&gt;</span>CG</td><td>182&nbsp;days</td><td>Awaiting someone to add.</td></tr>
+<tr><th scope="row">TVV<span class="arrow">-&gt;</span>GPW</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">TVV<span class="arrow">-&gt;</span>MTV</td><td>182&nbsp;days</td><td>1.5 ratio.</td></tr>
+<tr><th scope="row">TVV<span class="arrow">-&gt;</span>OPS</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr class="spacer"></tr>
 <tr><td colspan="3">U2.dmhy.org (U2分享園@動漫花園) (U2)<br>Invite forum unlocks with Power User user class: 50GB download, 1.05 ratio, 4 weeks account age.<br><br>Elite User user class: 120GB download, 1.55 ratio, 8 weeks account age.<br>Crazy User user class: 300GB download, 2.05 ratio, 15 weeks account age.<br>Insane User user class: 500GB download, 2.55 ratio, 25 weeks account age.</td></tr>
 <tr><th scope="row">U2<span class="arrow">-&gt;</span>Azusa</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">U2<span class="arrow">-&gt;</span>DIC</td><td>105&nbsp;days</td><td>Crazy User user class. 5 music torrent uploads, or 10 other uploads.</td></tr>
@@ -715,12 +782,22 @@ BluExtremist user class: 20TB upload, 3 months account age.<br>BluSeeder user cl
 <tr><th scope="row">U2<span class="arrow">-&gt;</span>PTer</td><td>182&nbsp;days</td><td>Insane User user class. 6 months account age.</td></tr>
 <tr><th scope="row">U2<span class="arrow">-&gt;</span>Xinglin</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">UHDBits (UHDB)<br>Invite forum unlocks with Extreme User user class: 300GB upload, 2.0 ratio, 6 snatches, 20 seed/leech ratio, 8 weeks account age.</td></tr>
-<tr><th scope="row">UHDB<span class="arrow">-&gt;</span>Aither</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><td colspan="3">UHDBits (UHDB)<br>Invite forum unlocks with Extreme User+ user class: 300GB upload, 2.0 ratio, 6 snatches, 20 seed/leech ratio, 8 weeks account age.</td></tr>
+<tr><th scope="row">UHDB<span class="arrow">-&gt;</span>Aither</td><td>121&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">UHDB<span class="arrow">-&gt;</span>ANT</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">UHDB<span class="arrow">-&gt;</span>BLU</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">UHDB<span class="arrow">-&gt;</span>BLU</td><td>91&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">UHDB<span class="arrow">-&gt;</span>DajiaoPT</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">UHDB<span class="arrow">-&gt;</span>FL</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">UHDB<span class="arrow">-&gt;</span>iAnon</td><td>365&nbsp;days</td><td>1.4 ratio.</td></tr>
 <tr><th scope="row">UHDB<span class="arrow">-&gt;</span>NBL</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">UHDB<span class="arrow">-&gt;</span>OPS</td><td>120&nbsp;days</td><td>4 months account age.</td></tr>
+<tr><th scope="row">UHDB<span class="arrow">-&gt;</span>OPS</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">UHDB<span class="arrow">-&gt;</span>RFX</td><td>56&nbsp;days</td><td>100GB seed size.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">XSpeeds (XS)<br>Awaiting someone to add.
+</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">XThor (XT)<br>Awaiting someone to add.
+</td></tr>
 <tr class="spacer"></tr>
 </table>
 </body>
