--- a/index.html
+++ b/index.html
@@ -537,11 +537,13 @@
 <tr><th scope="row">UHDB<span class="arrow">-&gt;</span>NBL</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">UHDB<span class="arrow">-&gt;</span>OPS</td><td>120&nbsp;days</td><td>4 months account age.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">HD-Torrents (HDT)<br>No official recruitment.</td></tr>
+<tr><td colspan="3">LzTr (LzTr)<br>Invite forum unlocks with Power User user class: 25GB upload, 1.05 ratio, 5 torrents uploaded, 2 weeks account age.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">ABTorrents (ABT)<br>No invite forum.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">LzTr (LzTr)<br>Invite forum unlocks with Power User user class: 25GB upload, 1.05 ratio, 5 torrents uploaded, 2 weeks account age.</td></tr><tr class="spacer"></tr>
+<tr><td colspan="3">HD-Torrents (HDT)<br>No official recruitment.</td></tr><tr class="spacer"></tr>
 </table>
+<script data-goatcounter="https://ywvr1xj8.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+<noscript><img src="https://ywvr1xj8.goatcounter.com/count?p=/sheet/"></noscript>
 </body>
 </html>
