--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 <tr><th scope="row">BiB<span class="arrow">-&gt;</span><a href="#RFX">RFX</a></td><td>365&nbsp;days</td><td>12 months account age.</td></tr>
 <tr><th scope="row">BiB<span class="arrow">-&gt;</span><a href="#SceneHD">SceneHD</a></td><td>365&nbsp;days</td><td>12 months account age.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3" id="BLU">Blutopia (BLU)<br>Invite forum unlocks with BluExtremist or BluSeeder<br>BluExtremist: 20TB upload, 3 months account age.<br>BluSeeder: 5TB seedsize, 30 days average seedtime, 1 month account age.</td></tr>
+<tr><td colspan="3" id="BLU">Blutopia (BLU)<br>Invite forum unlocks with BluExtremist or BluSeeder<br>BluExtremist: 20TB upload, 3 months account age.<br>BluSeeder: 5TB seed size, 30 days average seedtime, 1 month account age.</td></tr>
 <tr><th scope="row">BLU<span class="arrow">-&gt;</span><a href="#CCS">CCS</a></td><td>30&nbsp;days</td><td>10 torrents uploaded.</td></tr>
 <tr><th scope="row">BLU<span class="arrow">-&gt;</span><a href="#DT">DT</a></td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
 <tr><th scope="row">BLU<span class="arrow">-&gt;</span><a href="#LST">LST</a></td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -184,7 +184,6 @@
 <tr><th scope="row">CG<span class="arrow">-&gt;</span><a href="#ANT">ANT</a></td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span><a href="#BdC">BdC</a></td><td>60&nbsp;days</td><td>2 months account age.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span><a href="#GPW">GPW</a></td><td>30&nbsp;days</td><td>10 torrents uploaded.</td></tr>
-<tr><th scope="row">CG<span class="arrow">-&gt;</span><a href="#JPTV.club">JPTV.club</a></td><td>30&nbsp;days</td><td>1.0 ratio.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span><a href="#MAM">MAM</a></td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span><a href="#NBL">NBL</a></td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">CG<span class="arrow">-&gt;</span><a href="#OPS">OPS</a></td><td>182&nbsp;days</td><td>1.5 ratio, 6 months account age.</td></tr>
@@ -554,35 +553,37 @@
 <tr class="spacer"></tr>
 <tr><td colspan="3" id="BBT">BakaBT (BBT)<br>No invite forum.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3" id="OTW">OldToons.world (OTW)<br>No invite forum.</td></tr>
+<tr><td colspan="3" id="TT">TranceTraffic (TT)<br>No invite forum.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3" id="SC">Secret Cinema (SC)<br>No invite forum.</td></tr>
+<tr><td colspan="3" id="OTW">OldToons.world (OTW)<br>No invite forum.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3" id="ABT">ABTorrents (ABT)<br>No invite forum.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3" id="HDT">HD-Torrents (HDT)<br>No invite forum.</td></tr>
-<tr class="spacer"></tr>
-<tr><td colspan="3" id="Aither">Aither (Aither)<br>Invite forum unlocks with Prometheus user class: 10TB upload or 10TB seedsize, 1.0 ratio, 1 month 2 weeks 1 day average seed time, 5 torrents uploaded, 8 months account age.</td></tr>
-<tr class="spacer"></tr>
-<tr><td colspan="3" id="UNW">Unwalled (UNW)<br>No invite forum.</td></tr>
-<tr class="spacer"></tr>
-<tr><td colspan="3" id="PxC">PixelCove (PxC)<br>No invite forum.</td></tr>
-<tr class="spacer"></tr>
-<tr><td colspan="3" id="CCS">Concertos (CCS)<br>No invite forum.</td></tr>
-<tr class="spacer"></tr>
-<tr><td colspan="3" id="PxHD">PixelHD (PxHD)<br>No invite forum.</td></tr>
-<tr class="spacer"></tr>
-<tr><td colspan="3" id="SG">SocietyGlitch (SG)<br>No invite forum.</td></tr>
-<tr class="spacer"></tr>
-<tr><td colspan="3" id="TT">TranceTraffic (TT)<br>No invite forum.</td></tr>
-<tr class="spacer"></tr>
-<tr><td colspan="3" id="HD-F">HD-Forever (HD-F)<br>No invite forum.</td></tr>
+<tr><td colspan="3" id="LzTr">LzTr (LzTr)<br>Invite forum unlocks with Power User user class: 25GB upload, 1.05 ratio, 5 torrents uploaded, 2 weeks account age.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3" id="HD-O">HD-Only (HD-O)<br>No invite forum.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3" id="LzTr">LzTr (LzTr)<br>Invite forum unlocks with Power User user class: 25GB upload, 1.05 ratio, 5 torrents uploaded, 2 weeks account age.</td></tr>
+<tr><td colspan="3" id="CCS">Concertos (CCS)<br>No invite forum.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3" id="DCC">DigitalCore.Club (DCC)<br>No invite forum.</td></tr><tr class="spacer"></tr>
+<tr><td colspan="3" id="UNW">Unwalled (UNW)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3" id="Seedpool">Seedpool (Seedpool)<br>Invite forum unlocks with MegaPool user class: 3.0 ratio, 25TB seed size, 1 year account age.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3" id="HDT">HD-Torrents (HDT)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3" id="SG">SocietyGlitch (SG)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3" id="DCC">DigitalCore.Club (DCC)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3" id="Aither">Aither (Aither)<br>Invite forum unlocks with Prometheus user class: 10TB upload or 10TB seed size, 1.0 ratio, 1 month 2 weeks 1 day average seed time, 5 torrents uploaded, 8 months account age.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3" id="PxC">PixelCove (PxC)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3" id="SC">Secret Cinema (SC)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3" id="HD-F">HD-Forever (HD-F)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3" id="PxHD">PixelHD (PxHD)<br>No invite forum.</td></tr><tr class="spacer"></tr>
 </table>
 <script data-goatcounter="https://ywvr1xj8.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 <noscript><img src="https://ywvr1xj8.goatcounter.com/count?p=/sheet/"></noscript>
